update: Reports persistently stored in database